@@ -1,7 +1,6 @@
 package me.shadorc.shadbot.command.game.roulette;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -29,7 +28,7 @@ import sx.blah.discord.util.EmbedBuilder;
 
 public class RouletteManager extends AbstractGameManager {
 
-	protected static final List<Integer> RED_NUMS = Arrays.asList(1, 3, 5, 7, 9, 12, 14, 16, 18, 19, 21, 23, 25, 27, 30, 32, 34, 36);
+	protected static final List<Integer> RED_NUMS = List.of(1, 3, 5, 7, 9, 12, 14, 16, 18, 19, 21, 23, 25, 27, 30, 32, 34, 36);
 
 	private static final int GAME_DURATION = 30;
 
